--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-
+        <script>
+            alert("Hello Javascript")
+        </script>
     </head>
     <body>
-        <h1>太神啦</h1>
+        <h1>test</h1>
     </body>
 </html>
