--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <script>
-            alert("Hello Javascript")
-        </script>
+        <title>test</title>
     </head>
     <body>
         <h1>test</h1>
+        <script>
+                alert("Hello Javascript")
+        </script>
     </body>
 </html>
