add new index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>test</title>
+        <meta charset="utf-8">
+        <title>My Personal Page</title>
     </head>
     <body>
-        <h1>test</h1>
-        <script>
-                alert("Hello Javascript")
-        </script>
+        <h1>Hello World!</h1>
     </body>
 </html>
